--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,6 @@ buildscript {
     }
     dependencies {
         
-
     }
 }
 
@@ -61,6 +60,11 @@ project(":core") {
         api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         api "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
         api "com.kotcrab.vis:vis-ui:1.3.0"
-        
+        api 'junit:junit:4.12'
+        testImplementation 'junit:junit:4.12'
+    }
+    
+    test {
+        useJUnit()
     }
 }
