added Table Spanning

--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,4 @@ core/.vs/VSWorkspaceState.json
 core/.vs/slnx.sqlite
 core/.vs/ProjectSettings.json
 core/.vs/core/v16/.suo
+.vs/useride/v16/.suo
