--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,6 @@ core/.vs/slnx.sqlite
 core/.vs/ProjectSettings.json
 core/.vs/core/v16/.suo
 .vs/useride/v16/.suo
+.vs/slnx.sqlite
+.vs/useride/v16/.suo
+.vs/VSWorkspaceState.json
